                               ViSP
                     Visual Servoing Platform
                     Resume of the change log

     Copyright (C) 2005 - 2017 by Inria. All rights reserved.
                      https://visp.inria.fr

ViSP 3.2.0 (under development)
  - New features
  - Tutorials
  - Bug fixed
    . [#279] Unable to build ViSP with Visual Studio 2010

----------------------------------------------
ViSP 3.1.0 (released December 22nd, 2017)
  - Contributors:
    . This release was possible thanks to contributions from Fabien Spindler,
      Souriya Trinh, Wenfeng Cai, Oleksandr Borysov, Marc Pouliquen, Ronald Ensing,
      Yuriy Baranov, Jason Chevie
    . Google Summer of Code 2017: Vikas Thamizharasan that developed for the
      model-based tracker Blender import/export CAD model plugins and a Qt-based
      CAD model viewer
  - New features
    . Improve vpRealSense to better support R200 device
    . Improve vpConfig.h header content to remove path to build tree when installed
    . Speed-up vpMbKltTracker and vpMbEdgeKltTracker during reinit
    . Remove numerical recipes code that is not open-source
    . Changes done in vpMatrix to use either Lapack, OpenCV or GSL 3rd party
    . Eigen 3rd party was introduced as an alternative for matrix computation
    . Lapack is now embedded as a build-in when Lapack system library is not found
    . vpVideoReader was improved to better detect first and last image numbers of an
      image sequence and better handle the frame step
    . Speed-up vpColVector::insert(), vpMatrix::insert() and vpMatrix::stack()
    . Refactor model-based tracker (+ some segfault / memory fixes)
    . Introduce vpMbGenericTracker a new class that can handle all the features
      supported by the model-based tracker but also consider stereo or multi-view
      tracking
    . Add model-based depth tracking using face normals or using a dense approach
    . Use BLAS library to compute dgemm and dgemv operations if available